# platform.core.uifw.efl-assist

./: AUTHORS  CMakeLists.txt  efl-assist.pc.in  project.config
doc/: Doxyfile.in
packaging/: efl-assist.spec
src/: CMakeLists.txt
src/include/: efl_assist.h  efl_assist_editfield.h  efl_assist_events.h  efl_assist_private.h  efl_assist_screen_reader.h
src/lib/: CMakeLists.txt  efl_assist.c  efl_assist_editfield.c  efl_assist_events.c  efl_assist_screen_reader.c
