option(DESKTOP "Build for i386 linux desktop" OFF)

if (DESKTOP)
	SET(LIB_SRCS
		efl_assist.c
		efl_assist_editfield.c
		efl_assist_events.c)
else (DESKTOP)
	SET(LIB_SRCS
		efl_assist.c
		efl_assist_editfield.c
		efl_assist_events.c)
endif (DESKTOP)

ADD_LIBRARY(${LIB_NAME} SHARED ${LIB_SRCS})

if (DESKTOP)
	PKG_CHECK_MODULES(LIB_PKGS REQUIRED elementary)
	ADD_DEFINITIONS("-DDESKTOP=1")
	ADD_DEFINITIONS("-DEXPORT_API=__attribute__((visibility(\"default\")))")
else (DESKTOP)
	PKG_CHECK_MODULES(LIB_PKGS REQUIRED elementary capi-base-common capi-appfw-application)
endif (DESKTOP)

FOREACH(flag ${LIB_PKGS_CFLAGS})
	SET(LIB_CFLAGS "${LIB_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES COMPILE_FLAGS "${LIB_CFLAGS}")
SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES VERSION ${VERSION})
SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES SOVERSION ${VERSION_MAJOR})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${LIB_PKGS_LDFLAGS} ${LIB_TARGET_PKGS_LDFLAGS})

INSTALL(TARGETS ${LIB_NAME} DESTINATION lib)

